Added initial proposal to site.

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         <div class="container">
             <h2>Product Proposals</h2>
             <p>Here you can find the latest product proposals submitted by our team members. Review and provide feedback to help refine our ideas.</p>
-            <!-- Example Proposal Items -->
+            <!-- Proposal Items -->
             <div class="proposal-item">
-                <h3>Proposal 1: Rainier Cat Platform Game</h3>
-                <p>A brief description of the Smart Home Assistant proposal, outlining its features and potential market impact.</p>
+                <h3><a href="https://docs.google.com/presentation/d/1u1n6wQ9Y3S4ZrN7FbVJw_HOAhemJdM7r-7uVk_oeL10/edit#slide=id.p">Proposal 1: Rainier Cat Platform Game</h3>
+                <p>A mobile and PC platformer game where players guide a cat through three unique story-driven maps to find its way back home. Along the journey, players collect trinkets that unlock deeper lore and enhance the storyline. Additionally, the game features timed and scored challenge maps with global leaderboards, allowing players to compete for top scores and see how they rank against their friends.</p>
             </div>
         </div>
     </section>
@@ -55,7 +55,7 @@
         <div class="container">
             <h2>Team Announcements</h2>
             <p>Stay updated with the latest announcements from the team. Important information regarding meetings, milestones, and deadlines will be posted here.</p>
-            <!-- Example Announcement Items -->
+            <!-- Announcement Items -->
             <div class="announcement-item">
                 <h3>Sample**Team Meeting on September 5th</h3>
                 <p>Don't miss our next team meeting where we will discuss the progress of current projects and upcoming deadlines.</p>
@@ -72,7 +72,7 @@
         <div class="container">
             <h2>Schedule</h2>
             <p>Keep track of our project timeline and important deadlines. Make sure to stay on top of your tasks and contribute to our shared goals.</p>
-            <!-- Example Schedule Items -->
+            <!-- Schedule Items -->
             <div class="schedule-item">
                 <h3>Sample**Phase 1: Research & Development</h3>
                 <p>August 15 - September 15</p>
@@ -89,7 +89,7 @@
         <div class="container">
             <h2>Proposed Updates</h2>
             <p>Review the proposed updates for our ongoing projects. These updates are crucial for the continuous improvement of our products.</p>
-            <!-- Example Update Items -->
+            <!-- Update Items -->
             <div class="update-item">
                 <h3>Sample**Update 1: Added cat sprites</h3>
                 <p>Created and uploaded cat sprites for game.</p>
