--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <p>Here you can find the latest product proposals submitted by our team members. Review and provide feedback to help refine our ideas.</p>
             <!-- Proposal Items -->
             <div class="proposal-item">
-                <h3><a href="https://docs.google.com/presentation/d/1u1n6wQ9Y3S4ZrN7FbVJw_HOAhemJdM7r-7uVk_oeL10/edit#slide=id.p">Proposal 1: Rainier Cat Platform Game</h3>
+                <h3><a href="https://docs.google.com/presentation/d/1u1n6wQ9Y3S4ZrN7FbVJw_HOAhemJdM7r-7uVk_oeL10/edit#slide=id.p">Proposal 1: Rainier Cat Platform Game</a></h3>
                 <p>A mobile and PC platformer game where players guide a cat through three unique story-driven maps to find its way back home. Along the journey, players collect trinkets that unlock deeper lore and enhance the storyline. Additionally, the game features timed and scored challenge maps with global leaderboards, allowing players to compete for top scores and see how they rank against their friends.</p>
             </div>
         </div>
