Updated schedule of items.

--- a/index.html
+++ b/index.html
@@ -58,12 +58,8 @@
             <p>Stay updated with the latest announcements from the team. Important information regarding meetings, milestones, and deadlines will be posted here.</p>
             <!-- Announcement Items -->
             <div class="announcement-item">
-                <h3>Sample**Team Meeting on September 5th</h3>
-                <p>Don't miss our next team meeting where we will discuss the progress of current projects and upcoming deadlines.</p>
-            </div>
-            <div class="announcement-item">
-                <h3>Sample**New Member Joining the Team</h3>
-                <p>We are excited to welcome a new developer to our team! More details will be shared in the next meeting.</p>
+                <h3>Team Proposals due by September 4th</h3>
+                <p>We will want to submit all proposals to be voted on by the 4th, and then we can have feedback/comments and finalize a proposal to submit on the 8th.</p>
             </div>
         </div>
     </section>
@@ -75,12 +71,16 @@
             <p>Keep track of our project timeline and important deadlines. Make sure to stay on top of your tasks and contribute to our shared goals.</p>
             <!-- Schedule Items -->
             <div class="schedule-item">
-                <h3>Sample**Phase 1: Research & Development</h3>
-                <p>August 15 - September 15</p>
+                <h3>Project Proposal Due</h3>
+                <p>Due by September 8th</p>
             </div>
             <div class="schedule-item">
-                <h3>Sample**Phase 2: Prototype Testing</h3>
-                <p>September 16 - October 10</p>
+                <h3>Phase 1: Prototype Testing</h3>
+                <p>Due by October 20th</p>
+            </div>
+            <div class="schedule-item">
+                <h3>Phase 2: Deployment</h3>
+                <p>Due by November 24th</p>
             </div>
         </div>
     </section>
