Added in a second proposal.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                 <h3><a href="https://docs.google.com/presentation/d/1u1n6wQ9Y3S4ZrN7FbVJw_HOAhemJdM7r-7uVk_oeL10/edit#slide=id.p">Proposal 1: Rainier Cat Platform Game</a></h3>
                 <p>A mobile and PC platformer game where players guide a cat through three unique story-driven maps to find its way back home. Along the journey, players collect trinkets that unlock deeper lore and enhance the storyline. Additionally, the game features timed and scored challenge maps with global leaderboards, allowing players to compete for top scores and see how they rank against their friends.</p>
             </div>
+            <div class="proposal-item">
+                <h3><a href="https://github.com/TeamSSRI/teamssri.github.io/blob/main/proposals/CS3354_Proposal_Olsen.pdf">Proposal 2: Health WebApp Game</a></h3>
+                <p>Develop an app that acts as a personal fitness coach, guiding users through their health and wellness journey. Gamify the app by incorporating features that motivate users to engage with it daily.</p>            </div>
         </div>
     </section>
 
