Added in final proposal.

--- a/index.html
+++ b/index.html
@@ -50,10 +50,16 @@
             </div>
             <div class="proposal-item">
                 <h3><a href="https://github.com/TeamSSRI/teamssri.github.io/blob/main/proposals/CS3354_Proposal_Olsen.pdf">Proposal 2: Health WebApp Game</a></h3>
-                <p>Develop an app that acts as a personal fitness coach, guiding users through their health and wellness journey. Gamify the app by incorporating features that motivate users to engage with it daily.</p>            </div>
+                <p>Develop an app that acts as a personal fitness coach, guiding users through their health and wellness journey. Gamify the app by incorporating features that motivate users to engage with it daily.</p>            
+            </div>
             <div class="proposal-item">
                 <h3><a href="https://github.com/TeamSSRI/teamssri.github.io/blob/main/proposals/CS%203354_Proposal_Shree.pdf">Proposal 3: ChoreBuddy: Household Task Manager</a></h3>
-                <p>ChoreBuddy allow users to create, assign, and track chores among housemates or family members</p>            </div>
+                <p>ChoreBuddy allow users to create, assign, and track chores among housemates or family members</p>            
+            </div>
+            <div class="proposal-item">
+                <h3><a href="https://github.com/TeamSSRI/teamssri.github.io/blob/main/proposals/ZRProposal.pdf">Proposal 4: Virtual Classroom Engagement Tool</a></h3>
+                <p>A web-based or mobile application that enhances student engagement in online learning environments.</p>            
+            </div>
         </div>
     </section>
 
