Updated index.html following proposal.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <nav class="navbar">
             <div class="container">
-                <h1 class="logo">Product Showcase</h1>
+                <h1 class="logo">Cat Gelocation Game</h1>
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#proposals">Product Proposals</a></li>
@@ -32,8 +32,8 @@
     <!-- Hero Section -->
     <section id="home" class="hero-section">
         <div class="container">
-            <h2>Welcome to Our Product Showcase</h2>
-            <p>Discover the latest and greatest in our product line.</p>
+            <h2>Welcome to Our University Product Showcase</h2>
+            <p>Developing fun cat games to keep people connected.</p>
             <a href="#proposals" class="btn">View Proposals</a>
         </div>
     </section>
@@ -45,8 +45,8 @@
             <p>Here you can find the latest product proposals submitted by our team members. Review and provide feedback to help refine our ideas.</p>
             <!-- Proposal Items -->
             <div class="proposal-item">
-                <h3><a href="https://docs.google.com/presentation/d/1u1n6wQ9Y3S4ZrN7FbVJw_HOAhemJdM7r-7uVk_oeL10/edit#slide=id.p">Proposal 1: Rainier Cat Platform Game</a></h3>
-                <p>A mobile and PC platformer game where players guide a cat through three unique story-driven maps to find its way back home. Along the journey, players collect trinkets that unlock deeper lore and enhance the storyline. Additionally, the game features timed and scored challenge maps with global leaderboards, allowing players to compete for top scores and see how they rank against their friends.</p>
+                <h3><strong><a href="https://docs.google.com/presentation/d/1u1n6wQ9Y3S4ZrN7FbVJw_HOAhemJdM7r-7uVk_oeL10/edit#slide=id.p">Proposal 1: Rainier Cat Platform Game</a></strong></h3>
+                <p><strong>A mobile and PC platformer game where players guide a cat through three unique story-driven maps to find its way back home. Along the journey, players collect trinkets that unlock deeper lore and enhance the storyline. Additionally, the game features timed and scored challenge maps with global leaderboards, allowing players to compete for top scores and see how they rank against their friends.</strong></p>
             </div>
             <div class="proposal-item">
                 <h3><a href="https://github.com/TeamSSRI/teamssri.github.io/blob/main/proposals/CS3354_Proposal_Olsen.pdf">Proposal 2: Health WebApp Game</a></h3>
@@ -69,6 +69,10 @@
             <h2>Team Announcements</h2>
             <p>Stay updated with the latest announcements from the team. Important information regarding meetings, milestones, and deadlines will be posted here.</p>
             <!-- Announcement Items -->
+            <div class="announcement-item">
+                <h3>[09/08/2024] Team Proposal: Cat Gelocation Game Selected</h3>
+                <p>We have voted to select the cat geolocation game, and are now working to develop specifications necessary for progress of the game.</p>
+            </div>
             <div class="announcement-item">
                 <h3>Team Proposals due by September 4th</h3>
                 <p>We will want to submit all proposals to be voted on by the 4th, and then we can have feedback/comments and finalize a proposal to submit on the 8th.</p>
@@ -101,11 +105,11 @@
     <section id="updates" class="updates-section">
         <div class="container">
             <h2>Proposed Updates</h2>
-            <p>Review the proposed updates for our ongoing projects. These updates are crucial for the continuous improvement of our products.</p>
+            <p>Review the proposed updates for our ongoing project. These updates are crucial for the continuous improvement of our product.</p>
             <!-- Update Items -->
             <div class="update-item">
-                <h3>Sample**Update 1: Added cat sprites</h3>
-                <p>Created and uploaded cat sprites for game.</p>
+                <h3>Proposal Selected: Cat Geolocation Game</h3>
+                <p>We have voted to select the cat geolocation game, and are now working to develop specifications necessary for progress of the game.</p>
             </div>
         </div>
     </section>
@@ -113,7 +117,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2024 Product Showcase. All Rights Reserved.</p>
+            <p>&copy; 2024 Cat Geolocation Game. All Rights Reserved.</p>
         </div>
     </footer>
 </body>
